# dmtx-oob

./: .gitignore  Makefile.am  README  configure.ac  create-symbol.sh  oob-data-minimum.xml
src/: Makefile.am  dbus.c  dbus.h  dmtx-oob-gdbus.c  dmtx-oob-gdbus.h  dmtx-oob.c  dmtxplugin-front.c  dmtxplugin-gdbus.c  dmtxplugin-gdbus.h  dmtxutil.c  dmtxutil.h  main.c  symbol.c  symbol.h  util.c  util.h
